syntax = "proto3";

package pandas;

message PandasDataFrame {
  bytes dataframe = 1;
  uint64 decompressed_size = 2;
}